--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
     volumes:
       - .:/data/
 
+  ide:
+    <<: *fastai
+    command: /bin/bash
+    network_mode: host
+    
   notebook:
     <<: *fastai
     command: bash -c "pip install -e . && jupyter notebook --allow-root --no-browser --ip=0.0.0.0 --port=8080 --NotebookApp.token='' --NotebookApp.password=''"
