--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,11 +1,11 @@
 {
     "name": "fastpy-codespaces",
     "dockerComposeFile": "docker-compose.yml",
-    "service": "jupyter",
+    "service": "ide",
     "mounts": [ "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind" ],
     "forwardPorts": [8080],
     "appPort": [8080],
     "extensions": ["ms-python.python",
                    "ms-azuretools.vscode-docker"],
-    "runServices": ["notebook", "jekyll"],
+    "runServices": ["ide", "notebook"],
 }
