--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -2,6 +2,7 @@
     "name": "fastpy-codespaces",
     "dockerComposeFile": "docker-compose.yml",
     "service": "ide",
+    "settings": {"terminal.integrated.shell.linux": "/bin/bash"},
     "mounts": [ "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind" ],
     "forwardPorts": [8080],
     "appPort": [8080],
