--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,9 @@ services:
     command: bash -c "jupyter notebook --allow-root --no-browser --ip=0.0.0.0 --port=8080 --NotebookApp.token='' --NotebookApp.password=''"
     ports:
       - "8080:8080"
+
+  http:
+    <<: *fastai
+    command: /bin/bash
+    ports:
+      - "80:80"
